--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -22,7 +22,7 @@
         }
     </script>
 </head>
-<body id="hallMap">
+<body id="hallMap styleIn7x3">
 <div id="myContainer">
     <header>
         <span class="mainLogo"></span>
