--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -112,7 +112,8 @@
                 <div class="close">×</div>
                 <ul class="title">
                     <li>型号：C3FE837CMJ<span id="center_cpxh_id_world"></span></li>
-                    <li>实验项目：耗电量<span id="center_sybh_id_world"></span></li>
+                    <!--<li>实验项目：耗电量<span id="center_sybh_id_world"></span></li>-->
+                    <li>实验项目：耗电量<span></span></li>
                 </ul>
                 <ul class="btnGroup">
                     <li class="active">
