--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -53,7 +53,7 @@ html,body{
     width:35%;
     font-weight: 900;
     font-size: 2.2em;
-    margin-top:1.1%;
+    margin-top:0.9%;
     margin-left:2%;
     letter-spacing: 0.3em;
 }
@@ -187,7 +187,6 @@ html,body{
     position: relative;
     height: 20%;
     width: 100%;
-    /* background:url("../images/system/currentStatus.png") no-repeat; */
 }
 
 .currentState_leftTitle ul li{
@@ -229,7 +228,7 @@ html,body{
 .leftContentList .lists{
     width: 16.5%;
     height:100%;
-    border-right: 1px solid #64ccff;
+    border-right: 1px solid #0d2e52;
     /* background-color:red; */
 }
 
@@ -239,6 +238,7 @@ html,body{
     height: 100%;
     margin: 0 auto;
 }
+
 .imgboxContent img{
     position: relative;
     top: 0.3em;
@@ -468,7 +468,7 @@ html,body{
 
 .recordscenterTitle .news ul li{
     padding: 2px 0;
-    width: 80%;
+    width: 90%;
     height: 30px;
     line-height: 30px;
     font-size: 0.9em;
