--- a/src/main/webapp/WEB-INF/pages/layout/hallMap.html
+++ b/src/main/webapp/WEB-INF/pages/layout/hallMap.html
@@ -56,26 +56,6 @@
                         </tr>
                         </thead>
                         <tbody id="mine_tbody_order">
-                        <!-- <tr>
-                            <td>研发调试</td>
-                            <td>3576</td>
-                            <td>68.3%</td>
-                        </tr>
-                        <tr>
-                            <td>新品认证</td>
-                            <td>3969</td>
-                            <td>93.0%</td>
-                        </tr>
-                        <tr>
-                            <td>量产测试</td>
-                            <td>3734</td>
-                            <td>96.7%</td>
-                        </tr>
-                        <tr>
-                            <td>监督抽查</td>
-                            <td>383</td>
-                            <td>100%</td>
-                        </tr> -->
                         </tbody>
                     </table>
                 </div>
@@ -158,11 +138,13 @@
                             <td>262</td>
                             <td>180</td>
                         </tr>
+<!--
                         <tr>
                             <td>模块商：</td>
                             <td>158</td>
                             <td>86</td>
                         </tr>
+-->
                         </tbody>
                     </table>
                 </div>
@@ -203,7 +185,7 @@
 
     <footer class="textBox">
         <div class="text">
-            <p>全球实验室已实现互联互通，可随时随地查看过程和结果数据，并最终形成检测大数据库；合作的30多个国际认证机构如UL、VDE、TUV等可实现全球国际认证检测数据的互认，无需运送到国外测试；除认证测试外，更多的是进行各种模拟用户的体验测试，以用户的标准评价产品。
+            <p>通过测试数据自动采集系统及LIMS平台，实现了全球实验室的互联互通，可远程、实时的观查测试全过程，并形成标准化的大数据库，共享应用；合作的50多个国际认证机构如UL、VDE、TUV等已实现实验室数据的认可，产品无需再运往国外机构测试；除各种认证测试外，还进行大量的模拟用户的体验测试，以用户的标准来评价产品质量
         </div>
     </footer>
 
