--- a/src/main/webapp/static/phm/css/phm2.css
+++ b/src/main/webapp/static/phm/css/phm2.css
@@ -38,13 +38,13 @@ html,body{
 }
 #head h1 a {
     display: block;
-    height:100%;
+    /* height:100%; */
     width:100%;
 }
 
 #head h1 a img{
     display:block;
-    height:100%;
+    /* height:100%; */
     width:100%;
 }
 
@@ -53,7 +53,7 @@ html,body{
     width:35%;
     font-weight: 900;
     font-size: 2.2em;
-    margin-top:0.9%;
+    margin-top:1.1%;
     margin-left:2%;
     letter-spacing: 0.3em;
 }
@@ -185,7 +185,7 @@ html,body{
 
 .imgbox{
     position: relative;
-    height: 20%;
+    height: 16%;
     width: 100%;
 }
 
@@ -238,6 +238,52 @@ html,body{
     height: 100%;
     margin: 0 auto;
 }
+/* 改动的地方 */
+.imgbox22{
+    position: relative;
+    width: 100%;
+    height: 2em;
+    margin: 0 auto;
+    /* background-color: red; */
+}
+.imgIcon{
+    position: absolute;
+    width: 18%;
+    height: 100%;
+    left: 50%;
+    margin-left: -9%;
+    background: 50% 50% no-repeat;
+    background-size: contain;
+    
+}
+.imgbox22 .bingleng{
+    background-image:url("../images/system/ice-cold.png");
+    
+}
+.imgbox22 .xidi{
+    background-image:url("../images/system/washing.png");
+}
+.imgbox22 .jiakong{
+    background-image:url("../images/system/jiakong.png");
+    background-size: 100% 80%;
+}
+.imgbox22 .shangkong{
+    background-image:url("../images/system/shangkong.png");
+}
+.imgbox22 .reshuiqi{
+    background-image:url("../images/system/waterheater.png");
+}
+.imgbox22 .chudian{
+    background-image:url("../images/system/kitchen.png");
+    background-size: 100% 80%;
+
+
+}
+
+
+
+
+
 
 .imgboxContent img{
     position: relative;
@@ -267,7 +313,7 @@ html,body{
     color:#ff9f30;
 }
 .txt2,.txt4{
-    font-size: 0.5em;
+    font-size: 0.6em;
     text-align: center;
 }
 .txt1{
@@ -467,10 +513,10 @@ html,body{
 }
 
 .recordscenterTitle .news ul li{
-    padding: 2px 0;
+    padding: 5px 0;
     width: 90%;
-    height: 30px;
-    line-height: 30px;
+    height: 45px;
+    line-height: 45px;
     font-size: 0.9em;
     vertical-align: center;
     white-space: nowrap;
