--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -294,7 +294,7 @@ strong{
     }
     .legend{
         --c_lab1:#00e673;
-        --c_lab2:#ffec3d;
+        --c_lab2:#f5222d;
         --c_lab3:#b37feb;
         --c_lab4:#ff85c0;
         --c_line1:#6fc;
