删掉一些js,修改PHm ulab若干

--- a/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
+++ b/src/main/webapp/WEB-INF/pages/layout/fullScreen_map.html
@@ -17,8 +17,8 @@
                 <img class="flat" src="${contextPath!}/static/img/ico/btn_flat_off.png">
         </span>
         <span class="quit">
-                <span class="flat-btnTip">切换</span><a href="${contextPath!}/lab/full">
-                <img class="quit" src="${contextPath!}/static/img/labMain/labMain_toTotalStatus.png"></a>
+            <span class="flat-btnTip">切换</span><a href="${contextPath!}/lab/full">
+            <img class="quit" src="${contextPath!}/static/img/labMain/labMain_toTotalStatus.png"></a>
         </span>
     </div>
     <a id="toPhm" href="${contextPath!}/phm/index" style="border: 1px solid transparent;
@@ -218,6 +218,6 @@
         myChartFlatLB_full = echarts.init($fullPage.find(".flat-left-bottom .myChart")[0]);
         myCharts = [myChartFlatLT_full, myChartFlatRT_full, myChartFlatLB_full];
         //左侧平面地图及其他左侧数据
-        reloadLeftData();
+        // reloadLeftData();
     });
 </script>
