--- a/src/main/webapp/WEB-INF/pages/layout/lab.html
+++ b/src/main/webapp/WEB-INF/pages/layout/lab.html
@@ -16,7 +16,7 @@
         </div>
         <!--頂部標題-->
         <div class="lab_head">
-            <h2 id="labName_world">检测中心数据中心</h2>
+            <h2 id="labName_world">检测中心</h2>
             <div class="btn-totalStatus">
                 <div class="icon"></div>
                 <span>返回总状态</span>
@@ -41,9 +41,9 @@
                 <nav class="labSubNav">
                     <ul>
                         <li class="labHome">中心介绍</li>
-                        <li class="status">运营状态</li>
+                        <li class="status active">运营状态</li>
                         <li class="analysis">数据分析</li>
-                        <li class="curves active">实时监测</li>
+                        <li class="curves">实时监测</li>
                         <li class="moduleMakers" style="display: none">实时数据</li>
                     </ul>
                 </nav>
