--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -225,7 +225,7 @@
         myChartFlatLB = echarts.init($("#l.left3x3").find(".flat-left-bottom .myChart")[0]);
         myCharts = [myChartFlatLT, myChartFlatRT, myChartFlatLB];
         //左侧平面地图及其他左侧数据
-        reloadLeftData();
+        // reloadLeftData();
 
     });
     function parentMethod(){//平面地图的数据加载
