--- a/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
+++ b/src/main/webapp/WEB-INF/pages/layout/orderPopup.html
@@ -62,9 +62,9 @@
                     <button class="evaluation">评价</button>
                     <header>
                         <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180624101A11001</div>
+                        <div class="serialNumber">HR20180703101A11001</div>
                         <h4>下单时间：</h4>
-                        <div class="time"><time>2018-6-24  17:09</time></div>
+                        <div class="time"><time>2018-7-3  17:09</time></div>
                     </header>
 
                     <ul>
@@ -110,9 +110,9 @@
                     <button class="evaluation">评价</button>
                     <header>
                         <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180622101A11001</div>
+                        <div class="serialNumber">HR20180702101A11001</div>
                         <h4>下单时间：</h4>
-                        <div class="time"><time>2018-6-22  15:13</time></div>
+                        <div class="time"><time>2018-7-2  15:13</time></div>
                     </header>
 
                     <ul>
@@ -158,9 +158,9 @@
                     <button class="evaluation">评价</button>
                     <header>
                         <h4>试验编号：</h4>
-                        <div class="serialNumber">HR20180620101A11001</div>
+                        <div class="serialNumber">HR20180629101A11001</div>
                         <h4>下单时间：</h4>
-                        <div class="time"><time>2018-6-20  15:13</time></div>
+                        <div class="time"><time>2018-6-29  15:13</time></div>
                     </header>
 
                     <ul>
@@ -219,13 +219,13 @@
                 </ul>
                 <ul class="btnGroup">
                     <li class="active">
-                        <button>S20180516002</button>
+                        <button>S20180629003-01</button>
                     </li>
                     <li>
-                        <button>S20180516003</button>
+                        <button>S20180629003-02</button>
                     </li>
                     <li>
-                        <button>S20180516004</button>
+                        <button>S20180629003-03</button>
                     </li>
                 </ul>
             </header>
