--- a/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
+++ b/src/main/webapp/WEB-INF/pages/layout/tab/tab3.html
@@ -125,6 +125,6 @@ $(function () {
     $("#tab3").find(".btnGroup > span").click(function () {
         $(this).addClass("active").siblings().removeClass("active")
     });
-    loadTab3Data();
+    // loadTab3Data();
 })
 </script>
