--- a/src/main/webapp/WEB-INF/pages/layout/left180508.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left180508.html
@@ -339,8 +339,8 @@
     </div>
 
 
-<script src="${contextPath!}/static/js/statistics180508.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/main_left.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/statistics180508.js?"></script>
+<script src="${contextPath!}/static/js/main_left.js"></script>
 <script>
     var myCharts = [];
     var myChartFlatRT;
