--- a/src/main/webapp/WEB-INF/pages/layout/left.html
+++ b/src/main/webapp/WEB-INF/pages/layout/left.html
@@ -204,8 +204,8 @@
     </div>
 
 
-<script src="${contextPath!}/static/js/statistics.js?time=New Date()"></script>
-<script src="${contextPath!}/static/js/main_left.js?time=New Date()"></script>
+<script src="${contextPath!}/static/js/statistics.js"></script>
+<script src="${contextPath!}/static/js/main_left.js"></script>
 <script>
     var myCharts = [];
     var myChartFlatRT;
