--- a/src/main/webapp/WEB-INF/pages/layout/right.html
+++ b/src/main/webapp/WEB-INF/pages/layout/right.html
@@ -56,10 +56,10 @@
 
     </div>
     <script src="${contextPath!}/static/asserts/js/highcharts.js"></script>
-    <script src="${contextPath!}/static/js/main_right.js?time=New Date()"></script>
+    <script src="${contextPath!}/static/js/main_right.js"></script>
     <!--<script src="${contextPath!}/static/js/tabs/tab2.js?time=New Date()"></script>-->
     <!--<script src="${contextPath!}/static/js/tabs/tab3.js?time=New Date()"></script>-->
-    <script src="${contextPath!}/static/js/tabs/tab4.js?time=New Date()"></script>
+    <script src="${contextPath!}/static/js/tabs/tab4.js"></script>
     <script>
         var labTypeCode;//实验室类型
 
