--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -4,6 +4,9 @@
 	background-size: 100% 100%;
 	width:100%;
 }
+.colorRed{
+	color: red;
+}
 /*=============================head==============================*/
 #head{
 	overflow: hidden;
