PHM柱子点进去的不同场景

--- a/src/main/webapp/static/css/hallMap.css
+++ b/src/main/webapp/static/css/hallMap.css
@@ -96,7 +96,7 @@ strong{
         height: 6.5rem;
         font-size: .875rem;
         text-align: center;
-        background: url(../img/bg_title.png) no-repeat;
+        background: url(../img/hallMap/bg_header_ulab.png) no-repeat;
         background-position-x: 50%;
         background-position-y: 1em;
         background-size: 98% 63%;
