--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -361,6 +361,7 @@ p.colorOrange{
 	height:100%;
 	float:left;
 }
+
 .leftStates .jtState {
 	width:13.5%;
 	height:48%;
@@ -626,4 +627,29 @@ p.colorOrange{
     margin-left: 1%;
 }
 
+.myline {
+	position:absolute;
+	height:0;
+	width:3em;
+	border-top:dotted 0.1em;
+}
+.line1,.line4 {    
+    top: 7.7rem;
+    border-color:#d00;
+}
+.line2,.line5 {
+   
+     top: 8rem;
+    border-color:#00e76d;
+}
+.line3,.line6 {   
+    top: 8.3rem;
+     border-color:#66ccff;
+}
+.line1,.line2,.line3 {
+	left: 6em;
+}
+.line4,.line5,.line6 {
+	left:39rem;
+}
 
