--- a/src/main/webapp/static/phm/css/indexAnimation.css
+++ b/src/main/webapp/static/phm/css/indexAnimation.css
@@ -35,14 +35,14 @@ body {
 }
 .textPicBox h3{
     font-weight: normal;
-    margin-bottom: 2rem;
+    margin-bottom: 1.5rem;
     font-size: .85em;
     color:#6cf!important;
 }
 
 .textPicBox:nth-of-type(1) {
     position: absolute;
-    left: 5rem;
+    left: 4rem;
 }
 .textPicBox:nth-of-type(2) {
     width: 30rem;
@@ -55,9 +55,14 @@ body {
 }
 
 .textPicBox img {
-    width: 100%;
+    width: 63%;
 }
-
+.textPicBox h4{
+    font-size: .75rem;
+    text-align: left;
+    text-indent: 4rem;
+    margin-bottom: .25rem;
+}
 .textPicBox .picBox {
     transition: all 1s;
     position: relative;
