--- a/src/main/webapp/static/phm/css/status.css
+++ b/src/main/webapp/static/phm/css/status.css
@@ -357,6 +357,7 @@ p.colorOrange{
 	height:100%;
 }
 .bottomState .leftStates {
+	position: relative;
 	width:50%;
 	height:100%;
 	float:left;
@@ -631,25 +632,28 @@ p.colorOrange{
 	position:absolute;
 	height:0;
 	width:3em;
-	border-top:dotted 0.1em;
+	border-top:dotted 0.0625em;
 }
-.line1,.line4 {    
-    top: 7.7rem;
+
+.line1,.line4 {
+    top: 7.7em;
     border-color:#d00;
 }
 .line2,.line5 {
    
-     top: 8rem;
+     top: 8em;
     border-color:#00e76d;
 }
 .line3,.line6 {   
-    top: 8.3rem;
+    top: 8.3em;
      border-color:#66ccff;
 }
 .line1,.line2,.line3 {
 	left: 6em;
+	z-index: 1;
 }
 .line4,.line5,.line6 {
-	left:39rem;
+	left:31.5em;
+	z-index: 1;
 }
 
